src/test/ui/associated-type-bounds/bad-bounds-on-assoc-in-trait.stderr
error[E0277]: `<<Self as Case1>::C as Iterator>::Item` cannot be sent between threads safely
  --> $DIR/bad-bounds-on-assoc-in-trait.rs:28:36
   |
LL |     type C: Clone + Iterator<Item: Send + Iterator<Item: for<'a> Lam<&'a u8, App: Debug>> + Sync>;
   |                                    ^^^^ `<<Self as Case1>::C as Iterator>::Item` cannot be sent between threads safely
   |
  ::: $DIR/bad-bounds-on-assoc-in-trait.rs:38:1
   |
LL | pub unsafe auto trait Send {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Send`
   |
error[E0277]: `<<Self as Case1>::C as Iterator>::Item` is not an iterator
  --> $DIR/bad-bounds-on-assoc-in-trait.rs:28:43
   |
LL |     type C: Clone + Iterator<Item: Send + Iterator<Item: for<'a> Lam<&'a u8, App: Debug>> + Sync>;
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `<<Self as Case1>::C as Iterator>::Item` is not an iterator
   |
  ::: $DIR/bad-bounds-on-assoc-in-trait.rs:99:1
   |
LL | pub trait Iterator {
   | ^^^^^^^^^^^^^^^^^^ required by this bound in `Iterator`
   |
error[E0277]: `<<Self as Case1>::C as Iterator>::Item` cannot be shared between threads safely
  --> $DIR/bad-bounds-on-assoc-in-trait.rs:28:93
   |
LL |     type C: Clone + Iterator<Item: Send + Iterator<Item: for<'a> Lam<&'a u8, App: Debug>> + Sync>;
   |                                                                                             ^^^^ `<<Self as Case1>::C as Iterator>::Item` cannot be shared between threads safely
   |
  ::: $DIR/bad-bounds-on-assoc-in-trait.rs:469:1
   |
LL | pub unsafe auto trait Sync {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Sync`
   |
